--- a/Week 2/Lab 2/TravellingSalesmanProblem.ipynb
+++ b/Week 2/Lab 2/TravellingSalesmanProblem.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Get Distance Now!"
+    "## Step 2: Get Distance"
    ]
   },
   {
