--- a/Week 5/Lab 5/lab5.ipynb
+++ b/Week 5/Lab 5/lab5.ipynb
@@ -170,11 +170,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "population size: 20\n",
+      "[1234555999, 1335567890, 1234555999, 1335567890, 1234567899, 1335555990, 1235555999, 1334567890, 1235555999, 1334567890, 1234555999, 1335567890, 1335555999, 1234567890, 1335555999, 1234567890, 1235555999, 1334567890, 1234555999, 1335567890]\n"
+     ]
+    }
+   ],
    "source": [
-    "population = "
+    "population = []\n",
+    "slice_points = []\n",
+    "\n",
+    "for i in range(0,10):\n",
+    "    n = rand.randint(0,10)\n",
+    "    slice_points.append(n)\n",
+    "    childA, childB = crossover_solution(n)\n",
+    "    population = population + [childA, childB]\n",
+    "\n",
+    "print(\"population size:\",len(population))\n",
+    "print(population)"
    ]
   }
  ],
