--- a/Week 5/Lab 5/lab5.ipynb
+++ b/Week 5/Lab 5/lab5.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent1, parent2 = 1234567890, 1335555999"
+    "parent1, parent2 = 5555555555, 4444444444"
    ]
   },
   {
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slice after 6 digits\n",
-      "1234565999 1335557890\n"
+      "Slice after 5 digits\n",
+      "5555544444 4444455555\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "n = rand.randint(1,10)\n",
     "print(\"Slice after\", 10-n, \"digits\")\n",
     "\n",
-    "def crossover_solution(n):\n",
+    "def crossover_solution(parent1, parent2, n):\n",
     "    crossover_point = 10 ** n\n",
     "\n",
     "    pre1 = parent1 // crossover_point * crossover_point\n",
@@ -57,7 +57,7 @@
     "\n",
     "    return solutionA, solutionB\n",
     "\n",
-    "solution1, solution2 = crossover_solution(n)\n",
+    "solution1, solution2 = crossover_solution(parent1, parent2, n)\n",
     "print(solution1, solution2)"
    ]
   },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,15 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation of 1234555999 at 1 index\n",
-      "1834555999\n"
+      "Mutation of 5544444444 at index: 3\n",
+      "5541444444\n"
      ]
     }
    ],
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mutation of 1335567890 at 5 index\n"
+      "Mutation of 4455555555 at index: 8\n"
      ]
     }
    ],
@@ -136,22 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3170123889\n"
+      "39 51\n"
      ]
     }
    ],
    "source": [
-    "def evaluate(num1, num2):\n",
-    "    return num1 + num2\n",
+    "def evaluate(number):\n",
+    "    return sum(int(digit) for digit in str(number))\n",
     "\n",
-    "print(evaluate(solution3, solution4))"
+    "print(evaluate(solution3), evaluate(solution4))"
    ]
   },
   {
@@ -170,15 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 4, 3, 5, 6, 4, 3, 6, 4, 8]\n",
       "population size: 20\n",
-      "[1234555999, 1335567890, 1234555999, 1335567890, 1234567899, 1335555990, 1235555999, 1334567890, 1235555999, 1334567890, 1234555999, 1335567890, 1335555999, 1234567890, 1335555999, 1234567890, 1235555999, 1334567890, 1234555999, 1335567890]\n"
+      "[5555555554, 4444444445, 5555554445, 4444445554, 5555554554, 4444445445, 5555545445, 4444454554, 5555454554, 4444545445, 5555455445, 4444544554, 5555455554, 4444544445, 5555544445, 4444455554, 5555545554, 4444454445, 5544454445, 4455545554]\n"
      ]
     }
    ],
@@ -189,11 +190,48 @@
     "for i in range(0,10):\n",
     "    n = rand.randint(0,10)\n",
     "    slice_points.append(n)\n",
-    "    childA, childB = crossover_solution(n)\n",
-    "    population = population + [childA, childB]\n",
+    "    if(len(population)<2):\n",
+    "        childA, childB = crossover_solution(parent1, parent2, n)\n",
+    "        population = population + [childA, childB]\n",
+    "    else:\n",
+    "        childA, childB = crossover_solution(population[-2], population[-1], n)\n",
+    "        population = population + [childA, childB]\n",
     "\n",
+    "print(slice_points)\n",
     "print(\"population size:\",len(population))\n",
     "print(population)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Population Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49, 41, 47, 43, 48, 42, 47, 43, 47, 43, 47, 43, 48, 42, 46, 44, 48, 42, 44, 46]\n",
+      "smallest evaluation: 41\n",
+      "index of evaluation: 1\n",
+      "evaluated gene: 4444444445\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluations = [evaluate(child) for child in population]\n",
+    "\n",
+    "print(evaluations)\n",
+    "print(\"smallest evaluation:\", min(evaluations))\n",
+    "print(\"index of evaluation:\", evaluations.index(min(evaluations)))\n",
+    "print(\"evaluated gene:\", population[evaluations.index(min(evaluations))])\n"
    ]
   }
  ],
