Updated Templated.ipynb and .gitignore

--- a/Coursework 2/Template.ipynb
+++ b/Coursework 2/Template.ipynb
@@ -16,14 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "24ad75db-cf58-43f3-a868-c6165a53031d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d430d75b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set h (number of hidden neurons)\n",
     "h = 64  # Number of hidden neurons (can be modified)\n",
     "\n",
@@ -33,8 +41,16 @@
     "\n",
     "# Initialize random weights for the input-hidden and hidden-output connections\n",
     "WH = np.random.uniform(-1, 1, (h, 64))  # Weights between input and hidden layer\n",
-    "WO = np.random.uniform(-1, 1, (10, h))  # Weights between hidden and output layer\n",
-    "\n",
+    "WO = np.random.uniform(-1, 1, (10, h))  # Weights between hidden and output layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0d3d0805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sigmoid activation function\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 + np.exp(-x))\n",
@@ -51,8 +67,16 @@
     "    # Compute the output of the output neurons\n",
     "    for i in range(10):\n",
     "        weighted_sum_output = np.dot(outputHidden, WO[i])  # Weighted sum for output neuron i\n",
-    "        outputneuron[i] = 1 if weighted_sum_output >= 0 else 0  # Apply threshold\n",
-    "\n",
+    "        outputneuron[i] = 1 if weighted_sum_output >= 0 else 0  # Apply threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7a20ef01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Test error method to compare outputneuron with Map\n",
     "def testError(Map):\n",
     "    for i in range(10):\n",
@@ -61,7 +85,7 @@
     "    return False\n",
     "\n",
     "# Training method to adjust weights based on the errors\n",
-    "def training(Map, dataSample, learningRate=0.01):\n",
+    "def training(Map, dataSample, learningRate=0.0125):\n",
     "    global WH, WO\n",
     "\n",
     "    # Compute error for the output neurons\n",
@@ -85,19 +109,33 @@
     "    # Adjust weights between input and hidden neurons (WH)\n",
     "    for i in range(h):  # Loop over hidden neurons\n",
     "        for j in range(64):  # Loop over input data sample\n",
-    "            WH[i][j] += learningRate * dataSample[j] * errorHidden[i]\n",
-    "\n",
-    "# Example usage on the training data\n",
-    "\n",
+    "            WH[i][j] += learningRate * dataSample[j] * errorHidden[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b2b09176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the training data from CSV\n",
-    "training_data_path = 'Dataset1.csv'  # Ensure this is the correct path\n",
+    "training_data_path = 'cw2DataSet1.csv'  # Ensure this is the correct path\n",
     "training_data = pd.read_csv(training_data_path)\n",
     "\n",
     "# Set learning rate and number of cycles\n",
-    "learningRate = 0.01\n",
-    "total_cycles = 750  # Total number of training cycles\n",
-    "display_interval = 50  # Display accuracy after every 50 cycles\n",
-    "\n",
+    "learningRate = 0.0125\n",
+    "total_cycles = 500  # Total number of training cycles\n",
+    "display_interval = 5  # Display accuracy after every 50 cycles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d340662a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Iterate through the cycles\n",
     "for cycle in range(total_cycles):\n",
     "    success = 0\n",
@@ -132,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
