--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -59,10 +59,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E06ZrzVLDGQK",
-        "outputId": "566bce3b-d40a-4b3c-9ce2-00731bc3fb86"
+        "outputId": "5351a8a5-c827-4de4-ee2c-9c17ed6e1e9c"
       },
       "id": "E06ZrzVLDGQK",
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "24ad75db-cf58-43f3-a868-c6165a53031d",
       "metadata": {
         "id": "24ad75db-cf58-43f3-a868-c6165a53031d"
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "d430d75b",
       "metadata": {
         "id": "d430d75b"
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "0d3d0805",
       "metadata": {
         "id": "0d3d0805"
@@ -182,7 +182,7 @@
         "id": "jzhwXIY5dJlC"
       },
       "id": "jzhwXIY5dJlC",
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "id": "WBFgi4jLd-iY"
       },
       "id": "WBFgi4jLd-iY",
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "7a20ef01",
       "metadata": {
         "id": "7a20ef01"
@@ -272,7 +272,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Load training dataset and weights"
+        "### Load training dataset and set hyperparameters"
       ],
       "metadata": {
         "id": "Nh8OEEuPei6f"
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "b2b09176",
       "metadata": {
         "id": "b2b09176"
@@ -310,35 +310,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "d340662a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d340662a",
-        "outputId": "09f9213b-6f85-4103-bd25-a4365ba361a9"
+        "outputId": "bd4cd7b3-e507-4a37-c6d6-1a361014e368"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cycle 50, Accuracy: 0.9598\n",
-            "Cycle 100, Accuracy: 0.9829\n",
-            "Cycle 150, Accuracy: 0.9915\n",
-            "Cycle 200, Accuracy: 0.9929\n",
-            "Cycle 250, Accuracy: 0.9972\n",
-            "Cycle 300, Accuracy: 0.9964\n",
-            "Cycle 350, Accuracy: 0.9972\n",
-            "Cycle 400, Accuracy: 0.9975\n",
-            "Cycle 450, Accuracy: 0.9932\n",
-            "Cycle 500, Accuracy: 0.9939\n",
-            "Cycle 550, Accuracy: 0.9993\n",
-            "Cycle 600, Accuracy: 0.9993\n",
-            "Cycle 650, Accuracy: 0.9993\n",
-            "Cycle 700, Accuracy: 0.9993\n",
-            "Cycle 750, Accuracy: 0.9993\n"
+            "Cycle 1, Accuracy: 0.3293\n",
+            "Cycle 2, Accuracy: 0.5685\n",
+            "Cycle 3, Accuracy: 0.6614\n",
+            "Cycle 4, Accuracy: 0.7191\n",
+            "Cycle 5, Accuracy: 0.7433\n",
+            "Cycle 6, Accuracy: 0.7811\n",
+            "Cycle 7, Accuracy: 0.7917\n",
+            "Cycle 8, Accuracy: 0.8156\n",
+            "Cycle 9, Accuracy: 0.8309\n",
+            "Cycle 10, Accuracy: 0.8423\n",
+            "Cycle 11, Accuracy: 0.8451\n",
+            "Cycle 12, Accuracy: 0.8537\n",
+            "Cycle 13, Accuracy: 0.8601\n",
+            "Cycle 14, Accuracy: 0.8565\n",
+            "Cycle 15, Accuracy: 0.8683\n",
+            "Cycle 16, Accuracy: 0.8815\n",
+            "Cycle 17, Accuracy: 0.8825\n",
+            "Cycle 18, Accuracy: 0.8889\n",
+            "Cycle 19, Accuracy: 0.8978\n",
+            "Cycle 20, Accuracy: 0.8925\n",
+            "Cycle 21, Accuracy: 0.8996\n",
+            "Cycle 50, Accuracy: 0.9534\n",
+            "Cycle 100, Accuracy: 0.9754\n",
+            "Cycle 150, Accuracy: 0.9811\n",
+            "Cycle 200, Accuracy: 0.9868\n",
+            "Cycle 250, Accuracy: 0.9907\n",
+            "Cycle 300, Accuracy: 0.9900\n",
+            "Cycle 350, Accuracy: 0.9872\n",
+            "Cycle 400, Accuracy: 0.9900\n",
+            "Cycle 450, Accuracy: 0.9979\n",
+            "Cycle 500, Accuracy: 0.9986\n",
+            "Cycle 550, Accuracy: 1.0000\n"
           ]
         }
       ],
@@ -405,7 +422,7 @@
         "id": "Xw94HdBHN0Zg"
       },
       "id": "Xw94HdBHN0Zg",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -449,16 +466,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5HA96NOVO4Nk",
-        "outputId": "7a5f58f8-808c-457b-eacd-7d4d47b9778e"
+        "outputId": "084e8ec7-a7b5-4b8e-9dfd-5c768d8720c5"
       },
       "id": "5HA96NOVO4Nk",
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Testing Accuracy: 0.9982\n"
+            "Testing Accuracy: 1.0000\n"
           ]
         }
       ]
