Adding context blocks

--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -41,6 +41,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "In this section we will set up the dataset repository, neurons, and functions used for Multi-Layered Perceptron."
+      ],
+      "metadata": {
+        "id": "QlaFGY-7zQ5F"
+      },
+      "id": "QlaFGY-7zQ5F"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Import datasets from Google Drive"
       ],
       "metadata": {
@@ -62,7 +72,7 @@
         "outputId": "5351a8a5-c827-4de4-ee2c-9c17ed6e1e9c"
       },
       "id": "E06ZrzVLDGQK",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "24ad75db-cf58-43f3-a868-c6165a53031d",
       "metadata": {
         "id": "24ad75db-cf58-43f3-a868-c6165a53031d"
@@ -108,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "d430d75b",
       "metadata": {
         "id": "d430d75b"
@@ -139,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "0d3d0805",
       "metadata": {
         "id": "0d3d0805"
@@ -182,7 +192,7 @@
         "id": "jzhwXIY5dJlC"
       },
       "id": "jzhwXIY5dJlC",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +219,7 @@
         "id": "WBFgi4jLd-iY"
       },
       "id": "WBFgi4jLd-iY",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "7a20ef01",
       "metadata": {
         "id": "7a20ef01"
@@ -281,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "b2b09176",
       "metadata": {
         "id": "b2b09176"
@@ -310,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "d340662a",
       "metadata": {
         "colab": {
@@ -422,7 +432,7 @@
         "id": "Xw94HdBHN0Zg"
       },
       "id": "Xw94HdBHN0Zg",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +479,7 @@
         "outputId": "084e8ec7-a7b5-4b8e-9dfd-5c768d8720c5"
       },
       "id": "5HA96NOVO4Nk",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
