Adding context blocks v2

--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -51,7 +51,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Import datasets from Google Drive"
+        "### Import datasets from Google Drive\n",
+        "\n",
+        "Upload training and testing datasets on google drive in the root folder and then connect drive to notebook (Using Google Colab)."
       ],
       "metadata": {
         "id": "edwcDalecQct"
@@ -86,7 +88,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Import modules for matrix manipulation"
+        "### Import modules for matrix manipulation\n",
+        "\n",
+        "Importing numpy for matrix multiplication, random number generation, and other mathematical operations.\n",
+        "\n",
+        "Importing pandas for loading inputs and expected output from training and testing datasets."
       ],
       "metadata": {
         "id": "ny2ShaXLcGFM"
@@ -109,7 +115,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Hidden layers and weights"
+        "### Hidden layers and weights\n",
+        "\n",
+        "Initialize number of hidden neurons to 64, one for each pixel of the 8x8 input.\n",
+        "\n",
+        "Initialize hidden layer output arrays and weights between input and hidden layers, and hidden and output layers."
       ],
       "metadata": {
         "id": "gKq4u1wWcVdN"
@@ -140,7 +150,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Feedfoward function"
+        "### Feedfoward function\n",
+        "\n",
+        "The feedforward function applies matrix multiplation and activation functions with generated weights to get relations between input and output layers."
       ],
       "metadata": {
         "id": "Ivki7SwIcf1k"
@@ -174,7 +186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sigmoid function"
+        "### Sigmoid function\n"
       ],
       "metadata": {
         "id": "7qMpXZfddF_-"
