Added markdown with descriptions

--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -23,15 +23,14 @@
         "MISIS: M00983641\n",
         "Professor: Dr. Maha Saadeh\n",
         "\n",
-        "This notebook uses training dataset to learn the type of digit based on neural activations. It generates the prediction model and applies it to a new testing dataset to predict a base10 digit.\n",
-        "\n",
-        "The training uses Neural Netwoks, especially Multi-Layered Perceptrons to create hidden layers and apply feed forward functions to get a bias toward the correct number."
+        "This notebook demonstrates the development of a neural network model to recognize handwritten digits. It uses a training dataset to teach the network to identify digits (0-9) based on their features and applies the trained model to predict digits in a separate test dataset. The implementation employs Multi-Layer Perceptrons (MLP), focusing on forward propagation, activation functions, and iterative weight adjustments through training."
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Setup"
+        "## Setup\n",
+        "In this section, we configure the environment for model development. This involves loading the datasets, defining necessary mathematical and neural network functions, and initializing parameters for training the Multi-Layer Perceptron model."
       ],
       "metadata": {
         "id": "Sq_971WycNn8"
@@ -41,19 +40,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this section we will set up the dataset repository, neurons, and functions used for Multi-Layered Perceptron."
-      ],
-      "metadata": {
-        "id": "QlaFGY-7zQ5F"
-      },
-      "id": "QlaFGY-7zQ5F"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "### Import datasets from Google Drive\n",
         "\n",
-        "Upload training and testing datasets on google drive in the root folder and then connect drive to notebook (Using Google Colab)."
+        "Before proceeding, the notebook connects to the Drive to access the training and testing datasets."
       ],
       "metadata": {
         "id": "edwcDalecQct"
@@ -90,9 +79,10 @@
       "source": [
         "### Import modules for matrix manipulation\n",
         "\n",
-        "Importing numpy for matrix multiplication, random number generation, and other mathematical operations.\n",
-        "\n",
-        "Importing pandas for loading inputs and expected output from training and testing datasets."
+        "This section imports essential libraries for numerical and data manipulation:\n",
+        "*  NumPy: For efficient mathematical operations like matrix multiplication and random number generation.\n",
+        "*  Pandas: For loading and preprocessing data from the training and testing datasets.\n",
+        "\n"
       ],
       "metadata": {
         "id": "ny2ShaXLcGFM"
@@ -116,10 +106,9 @@
       "cell_type": "markdown",
       "source": [
         "### Hidden layers and weights\n",
-        "\n",
-        "Initialize number of hidden neurons to 64, one for each pixel of the 8x8 input.\n",
-        "\n",
-        "Initialize hidden layer output arrays and weights between input and hidden layers, and hidden and output layers."
+        "Here, we define the hidden layer parameters for the neural network:\n",
+        "*   Hidden neurons: Each of the 64 neurons represents a pixel in the 8x8 input image.\n",
+        "*   Weights: Randomly initialize weights connecting input to hidden layers with a 64x64 matrix and hidden to output layers with a 10x64 matrix."
       ],
       "metadata": {
         "id": "gKq4u1wWcVdN"
@@ -152,7 +141,11 @@
       "source": [
         "### Feedfoward function\n",
         "\n",
-        "The feedforward function applies matrix multiplation and activation functions with generated weights to get relations between input and output layers."
+        "This section defines the feedforward function, a core component of the neural network:\n",
+        "* It calculates the outputs of the hidden and output layers using matrix multiplication and activation functions.\n",
+        "* The sigmoid function is used for hidden layer activation, while a step function determines output layer values.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Ivki7SwIcf1k"
@@ -180,13 +173,14 @@
         "    # Compute the output of the output neurons\n",
         "    for i in range(10):\n",
         "        weighted_sum_output = np.dot(outputHidden, WO[i])  # Weighted sum for output neuron i\n",
-        "        outputneuron[i] = 1 if weighted_sum_output >= 0 else 0  # Apply threshold"
+        "        outputneuron[i] = step(weighted_sum_output)  # Apply step"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Sigmoid function\n"
+        "### Sigmoid function\n",
+        "The sigmoid function is a mathematical activation function that introduces non-linearity into the model. It outputs values between 0 and 1, making it ideal for binary classification and probabilistic interpretations."
       ],
       "metadata": {
         "id": "7qMpXZfddF_-"
@@ -197,8 +191,8 @@
       "cell_type": "code",
       "source": [
         "# Sigmoid activation function\n",
-        "def sigmoid(x):\n",
-        "    return 1 / (1 + np.exp(-x))"
+        "def sigmoid(weighted_sum):\n",
+        "    return 1 / (1 + np.exp(-weighted_sum))"
       ],
       "metadata": {
         "id": "jzhwXIY5dJlC"
@@ -210,7 +204,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Validation function"
+        "### Step function\n",
+        "\n",
+        "The step activation function is a threshold-based function that outputs 0 or 1 (a fixed value) depending on whether the input surpasses a specified threshold."
+      ],
+      "metadata": {
+        "id": "3tut1TpocI39"
+      },
+      "id": "3tut1TpocI39"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def step(weighted_sum):\n",
+        "  return 1 if weighted_sum >= 0 else 0"
+      ],
+      "metadata": {
+        "id": "LwEbFSkvdBJq"
+      },
+      "id": "LwEbFSkvdBJq",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Validation function\n",
+        "The validation function compares the predicted output with the expected target output (map). It identifies mismatches, which indicate errors that will guide weight adjustments during training or assist with calculating success during testing."
       ],
       "metadata": {
         "id": "Y4IhjQfTdNy5"
@@ -237,7 +257,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Model training function"
+        "### Model training function\n",
+        "This function performs supervised learning:\n",
+        "* It calculates errors for output and hidden neurons.\n",
+        "*   Updates weights between layers based on the error gradients, using backpropagation.\n",
+        "*   The learning rate controls the speed of weight updates to optimize the model."
       ],
       "metadata": {
         "id": "RcL9kcneeBXY"
@@ -294,7 +318,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Load training dataset and set hyperparameters"
+        "### Load training dataset and set hyperparameters\n",
+        "In this section, the training dataset is loaded, and hyperparameters are defined:\n",
+        "* Learning rate: Controls the rate of weight updates.\n",
+        "* Total cycles: Number of iterations for training the model.\n",
+        "* Display interval: Frequency of accuracy reporting during training."
       ],
       "metadata": {
         "id": "Nh8OEEuPei6f"
@@ -323,7 +351,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Build prediction model"
+        "### Build prediction model\n",
+        "This code runs the training loop:\n",
+        "* Processes each data sample in the training dataset.\n",
+        "* Uses the feedforward function to predict outputs.\n",
+        "* Compares predictions to expected outputs, updating weights to reduce errors.\n",
+        "* Tracks and displays model accuracy after specified intervals."
       ],
       "metadata": {
         "id": "p2HBT81Me3ms"
@@ -416,7 +449,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Testing"
+        "## Testing\n",
+        "This section evaluates the model's performance on unseen data using the testing dataset:\n",
+        "* Predicts outputs for each sample using the trained model.\n",
+        "* Calculates and reports overall accuracy, providing insight into the model's generalization capability."
       ],
       "metadata": {
         "id": "CFguS_htgAtJ"
