--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -51,21 +51,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "id": "E06ZrzVLDGQK",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "E06ZrzVLDGQK",
-        "outputId": "21773aaf-872b-44ae-f66a-feb2568a9ae8"
+        "outputId": "4f37e28b-7cb7-48c4-b9b1-72dd781502ce"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -73,6 +73,36 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Load training and testing datasets from Google Drive\n",
+        "\n",
+        "Once the notebook connects, read the datasets for training and testing"
+      ],
+      "metadata": {
+        "id": "ZaCJYE22Xw94"
+      },
+      "id": "ZaCJYE22Xw94"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the training data from CSV\n",
+        "training_data_path = '/content/drive/MyDrive/cw2DataSet1.csv'  # Ensure this is the correct path\n",
+        "training_data = pd.read_csv(training_data_path)\n",
+        "\n",
+        "# Load the testing data from CSV\n",
+        "testing_data_path = '/content/drive/MyDrive/cw2DataSet2.csv'  # Ensure this is the correct path\n",
+        "testing_data = pd.read_csv(training_data_path)"
+      ],
+      "metadata": {
+        "id": "Df_AEBT1Yfby"
+      },
+      "id": "Df_AEBT1Yfby",
+      "execution_count": 65,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -91,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "id": "24ad75db-cf58-43f3-a868-c6165a53031d",
       "metadata": {
         "id": "24ad75db-cf58-43f3-a868-c6165a53031d"
@@ -117,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "id": "d430d75b",
       "metadata": {
         "id": "d430d75b"
@@ -149,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "jzhwXIY5dJlC",
       "metadata": {
         "id": "jzhwXIY5dJlC"
@@ -175,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "id": "LwEbFSkvdBJq",
       "metadata": {
         "id": "LwEbFSkvdBJq"
@@ -204,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "id": "266261c7",
       "metadata": {
         "id": "266261c7"
@@ -239,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "id": "WBFgi4jLd-iY",
       "metadata": {
         "id": "WBFgi4jLd-iY"
@@ -270,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "id": "7a20ef01",
       "metadata": {
         "id": "7a20ef01"
@@ -337,10 +367,6 @@
       },
       "outputs": [],
       "source": [
-        "# Load the training data from CSV\n",
-        "training_data_path = '/content/drive/MyDrive/cw2DataSet1.csv'  # Ensure this is the correct path\n",
-        "training_data = pd.read_csv(training_data_path)\n",
-        "\n",
         "# Set learning rate and number of cycles\n",
         "learningRate = 0.025\n",
         "total_cycles = 300  # Total number of training cycles\n",
@@ -461,30 +487,6 @@
         "* Calculates and reports overall accuracy, providing insight into the model's generalization capability."
       ],
       "id": "A1FFZpdqDiPb"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uSOwtQI4DiPb"
-      },
-      "source": [
-        "### Load test dataset"
-      ],
-      "id": "uSOwtQI4DiPb"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F-nBmIbRDiPc"
-      },
-      "outputs": [],
-      "source": [
-        "# Load the testing data from CSV\n",
-        "testing_data_path = '/content/drive/MyDrive/cw2DataSet2.csv'  # Ensure this is the correct path\n",
-        "testing_data = pd.read_csv(training_data_path)"
-      ],
-      "id": "F-nBmIbRDiPc"
     },
     {
       "cell_type": "markdown",
@@ -761,7 +763,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "b2b09176",
       "metadata": {
         "id": "b2b09176"
@@ -786,51 +788,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "d340662a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d340662a",
-        "outputId": "c319529d-ac60-462d-88a3-3bd8dad25203"
+        "outputId": "823bdc1c-9df0-4752-8e84-24fbbb3baef1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cycle 1, Accuracy: 0.3738\n",
-            "Cycle 2, Accuracy: 0.6205\n",
-            "Cycle 3, Accuracy: 0.7002\n",
-            "Cycle 4, Accuracy: 0.7551\n",
-            "Cycle 5, Accuracy: 0.7850\n",
-            "Cycle 6, Accuracy: 0.7889\n",
-            "Cycle 7, Accuracy: 0.8181\n",
-            "Cycle 8, Accuracy: 0.8384\n",
-            "Cycle 9, Accuracy: 0.8501\n",
-            "Cycle 10, Accuracy: 0.8537\n",
-            "Cycle 11, Accuracy: 0.8765\n",
-            "Cycle 12, Accuracy: 0.8886\n",
-            "Cycle 13, Accuracy: 0.8950\n",
-            "Cycle 14, Accuracy: 0.8914\n",
-            "Cycle 15, Accuracy: 0.9057\n",
-            "Cycle 16, Accuracy: 0.9010\n",
-            "Cycle 17, Accuracy: 0.9171\n",
-            "Cycle 18, Accuracy: 0.9138\n",
-            "Cycle 19, Accuracy: 0.9171\n",
-            "Cycle 20, Accuracy: 0.9146\n",
-            "Cycle 21, Accuracy: 0.9146\n",
-            "Cycle 50, Accuracy: 0.9580\n",
-            "Cycle 100, Accuracy: 0.9776\n",
-            "Cycle 150, Accuracy: 0.9794\n",
-            "Cycle 200, Accuracy: 0.9886\n",
-            "Cycle 250, Accuracy: 0.9847\n",
-            "Cycle 300, Accuracy: 0.9858\n",
-            "Cycle 350, Accuracy: 0.9918\n",
-            "Cycle 400, Accuracy: 0.9922\n",
-            "Cycle 450, Accuracy: 0.9982\n",
-            "Cycle 500, Accuracy: 0.9986\n",
+            "Cycle 1, Accuracy: 0.3937\n",
+            "Cycle 2, Accuracy: 0.6476\n",
+            "Cycle 3, Accuracy: 0.7159\n",
+            "Cycle 4, Accuracy: 0.7779\n",
+            "Cycle 5, Accuracy: 0.8092\n",
+            "Cycle 6, Accuracy: 0.8234\n",
+            "Cycle 7, Accuracy: 0.8423\n",
+            "Cycle 8, Accuracy: 0.8601\n",
+            "Cycle 9, Accuracy: 0.8637\n",
+            "Cycle 10, Accuracy: 0.8704\n",
+            "Cycle 11, Accuracy: 0.8750\n",
+            "Cycle 12, Accuracy: 0.8822\n",
+            "Cycle 13, Accuracy: 0.8968\n",
+            "Cycle 14, Accuracy: 0.9039\n",
+            "Cycle 15, Accuracy: 0.9039\n",
+            "Cycle 16, Accuracy: 0.9089\n",
+            "Cycle 17, Accuracy: 0.9160\n",
+            "Cycle 18, Accuracy: 0.9142\n",
+            "Cycle 19, Accuracy: 0.9156\n",
+            "Cycle 20, Accuracy: 0.9270\n",
+            "Cycle 21, Accuracy: 0.9288\n",
+            "Cycle 50, Accuracy: 0.9566\n",
+            "Cycle 100, Accuracy: 0.9744\n",
+            "Cycle 150, Accuracy: 0.9847\n",
+            "Cycle 200, Accuracy: 0.9961\n",
+            "Cycle 250, Accuracy: 0.9957\n",
+            "Cycle 300, Accuracy: 0.9975\n",
+            "Cycle 350, Accuracy: 0.9982\n",
+            "Cycle 400, Accuracy: 1.0000\n",
+            "Cycle 450, Accuracy: 1.0000\n",
+            "Cycle 500, Accuracy: 1.0000\n",
             "Cycle 550, Accuracy: 1.0000\n"
           ]
         }
@@ -889,14 +891,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "5HA96NOVO4Nk",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5HA96NOVO4Nk",
-        "outputId": "c57f3f33-9b91-4e3b-a485-a7318fc4ff48"
+        "outputId": "c9f73f93-7e88-4b6f-dd43-3a3c92296f88"
       },
       "outputs": [
         {
