Fixed all comments

--- a/Coursework 2/coursework2Notebook.ipynb
+++ b/Coursework 2/coursework2Notebook.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "E06ZrzVLDGQK",
       "metadata": {
         "colab": {
@@ -90,18 +90,18 @@
       "cell_type": "code",
       "source": [
         "# Load the training data from CSV\n",
-        "training_data_path = '/content/drive/MyDrive/cw2DataSet1.csv'  # Ensure this is the correct path\n",
+        "training_data_path = '/content/drive/MyDrive/cw2DataSet1.csv'\n",
         "training_data = pd.read_csv(training_data_path)\n",
         "\n",
         "# Load the testing data from CSV\n",
-        "testing_data_path = '/content/drive/MyDrive/cw2DataSet2.csv'  # Ensure this is the correct path\n",
+        "testing_data_path = '/content/drive/MyDrive/cw2DataSet2.csv'\n",
         "testing_data = pd.read_csv(training_data_path)"
       ],
       "metadata": {
         "id": "Df_AEBT1Yfby"
       },
       "id": "Df_AEBT1Yfby",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "24ad75db-cf58-43f3-a868-c6165a53031d",
       "metadata": {
         "id": "24ad75db-cf58-43f3-a868-c6165a53031d"
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "d430d75b",
       "metadata": {
         "id": "d430d75b"
@@ -155,7 +155,7 @@
       "outputs": [],
       "source": [
         "# Set h (number of hidden neurons)\n",
-        "h = 64  # Number of hidden neurons (can be modified)\n",
+        "h = 64  # Number of hidden neurons\n",
         "\n",
         "# Global arrays for outputs\n",
         "outputHidden = np.zeros(h)  # Hidden layer outputs\n",
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "jzhwXIY5dJlC",
       "metadata": {
         "id": "jzhwXIY5dJlC"
@@ -205,13 +205,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "LwEbFSkvdBJq",
       "metadata": {
         "id": "LwEbFSkvdBJq"
       },
       "outputs": [],
       "source": [
+        "# Step activation function\n",
         "def step(weighted_sum):\n",
         "  return 1 if weighted_sum >= 0 else 0"
       ]
@@ -234,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "266261c7",
       "metadata": {
         "id": "266261c7"
@@ -269,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "WBFgi4jLd-iY",
       "metadata": {
         "id": "WBFgi4jLd-iY"
@@ -300,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "7a20ef01",
       "metadata": {
         "id": "7a20ef01"
@@ -758,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "b2b09176",
       "metadata": {
         "id": "b2b09176"
@@ -783,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "d340662a",
       "metadata": {
         "colab": {
@@ -886,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "5HA96NOVO4Nk",
       "metadata": {
         "colab": {
